--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1078,9 +1078,10 @@ div.search_result_div a
 		box-shadow: 10px 10px 10px #888888;
 		margin-bottom: 15px;
 		margin-top: 10px;
-		max-height: 200px;
+		max-height: 210px;
 		display: block;
 		margin: auto;
+		border: rgba(136, 136, 136, 0.39) solid 1px;
 	}
 }
 .view_bike_link
@@ -1322,6 +1323,8 @@ div.search_result_div a
 .search_result_div 
 {
 	border-bottom: solid 1px grey;
+	padding-top: 15px;
+	padding-bottom: 15px;
 	img
 	{
 		max-height: 280px;
