--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -96,7 +96,7 @@
     </div>
   </div>
 </div>
-
+<%= javascript_include_tag "jquery.min" %>
 <script type="text/javascript">
   $('select#make').change(function() 
   {
