--- a/app/views/bikes/_enquiry.html.erb
+++ b/app/views/bikes/_enquiry.html.erb
@@ -17,7 +17,7 @@
 		<div class="control-group">
 			<label class="control-label">Phone Number: </label>
 			<div class="controls">
-				<input type="tel" name="tel" required= "true">
+				<input type="tel" name="tel">
 			</div>
 		</div>
 		<div class="control-group">
