--- a/app/views/bikes/_form.html.erb
+++ b/app/views/bikes/_form.html.erb
@@ -173,7 +173,7 @@
     </div>
   </div>  
 <% end %>
-
+<%= javascript_include_tag "jquery.min" %>
 <script type="text/javascript">
 
   $(document).ready(function () 
