--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -171,7 +171,7 @@
     </div>
   </div>
 </div>
-
+<%= javascript_include_tag "jquery.min" %>
 <script type="text/javascript">
 //<![CDATA[
   $('ul.image_list li').css("cursor", "pointer"),
