--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag "jquery.min" %>
+    
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -129,8 +129,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
      <%= javascript_include_tag "application" %>
-     <%= javascript_include_tag "facebook" %>
-    <script  data-cfasync="false" type="text/javascript">
+    <script type="text/javascript">
       $(window).resize(function() {
       if ($(window).width() <= 979 && $(window).width() >=600){
         setTimeout(function() {
