--- a/app/views/bike_specs/_form.html.erb
+++ b/app/views/bike_specs/_form.html.erb
@@ -354,6 +354,7 @@
     <%end%>
   </div>
 <% end %>
+<%= javascript_include_tag "jquery.min" %>
 
 <script type="text/javascript">
   $('a#delete_picture').click(function() 
