--- a/app/views/shared/_logo.html.erb
+++ b/app/views/shared/_logo.html.erb
@@ -18,7 +18,7 @@
              
             </div>
       -->
-      <%= image_tag "logo.png", id:"image_logo"%>
+      <%= image_tag "logo.png", id:"image_logo", size: "200x130" %>
       BIKES.BECHNU.com
           </div>
 </a>
