--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
               </a>
             </li>
           </ul>
-          <a class="brand" href="/" title ="Bike Sales Nepal"><%=image_tag "logo_top.png"%></a>
+          <a class="brand" href="/" title ="Bike Sales Nepal"><%=image_tag "logo_top.png", size: "111x63"%></a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <li><%= link_to "Bikes For Sale", bikes_path%></li>
