--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -1,5 +1,5 @@
 <!--Indentation Complete-->
-
+<% cache do %>
 <div id="main_page_border" class= "span12">
   <div class= "span9">
     <div class = "main_page">
@@ -127,6 +127,6 @@
     </div>
   </div><!--row-->
 </div>
-    
+ <% end%>   
     
 
