--- a/app/views/user_mailer/send_to_spec.html.erb
+++ b/app/views/user_mailer/send_to_spec.html.erb
@@ -1,6 +1,6 @@
-Dear Admin
+<p>Dear Admin</p>
+<p>
+Bike <%=@bike.year%> <%=@bike.make%> <%=@bike.model%> <%=@bike.variant if !@bike.variant.blank?%> has been created. No record exist of that bike with that year, please add it to BikeSpec.</p>
 
-Bike <%=@bike.year%> +" " +<%=@bike.make%>+" " +<%=@bike.model%>+" " +<%=@bike.variant if !@bike.variant.blank?%> has been created. No record exist of that bike with that year, please add it to BikeSpec.
-
-cheers
-Bike.Bechnu.com
+<p>cheers</p>
+<p>Bike.Bechnu.com</p>
