--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -52,26 +52,30 @@
       <div class = "legen">Browse By: Makers</div>
         <div class= "browse_maker">
             
-          <a href = '<%=bike_specs_path(make: "Anna-Lifan")%>' title ="Bike Showroom Anna-Lifan"><div class= "image_border"><%= image_tag "anna-lifan.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "65x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Anna-Lifan")%>' title ="Bike Showroom Anna-Lifan"><div class= "image_border"><%= image_tag "anna-lifan.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "64x64"%></div></a>
           
-          <a href = '<%=bike_specs_path(make: "Demak")%>' title ="Bike Showroom Demak"><div class= "image_border"><%= image_tag "demak.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "65x62"%></div></a>
-          <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "65x62"%></div></a>
-                
-          <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Kawasaki")%>' title ="Bike Showroom Kawasaki"><div class= "image_border"><%= image_tag "kawasaki.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "KTM")%>' title ="Bike Showroom KTM"><div class= "image_border"><%= image_tag "ktm.jpg", size: "65x62"%></div></a>
-
-          <a href = '<%=bike_specs_path(make: "Mahindra")%>' title ="Bike Showroom Mahindra"><div class= "image_border"><%= image_tag "mahindra.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "65x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Demak")%>' title ="Bike Showroom Demak"><div class= "image_border"><%= image_tag "demak.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Hartford")%>' title ="Bike Showroom Hartford"><div class= "image_border"><%= image_tag "hartford.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "64x64"%></div></a>
           
-          <a href = '<%=bike_specs_path(make: "SYM")%>' title ="Bike Showroom SYM"><div class= "image_border"><%= image_tag "sym.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "65x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "65x62"%></div></a>
-            
+          <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Kawasaki")%>' title ="Bike Showroom Kawasaki"><div class= "image_border"><%= image_tag "kawasaki.jpg", size: "64x64"%></div></a>
+          
+          <a href = '<%=bike_specs_path(make: "KTM")%>' title ="Bike Showroom KTM"><div class= "image_border"><%= image_tag "ktm.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Mahindra")%>' title ="Bike Showroom Mahindra"><div class= "image_border"><%= image_tag "mahindra.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Piaggio")%>' title ="Bike Showroom Piaggio"><div class= "image_border"><%= image_tag "piaggio.jpg", size: "64x64"%></div></a>
+          
+          <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Rieju")%>' title ="Bike Showroom Rieju"><div class= "image_border"><%= image_tag "rieju.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "64x64"%></div></a>
+          
+          <a href = '<%=bike_specs_path(make: "SYM")%>' title ="Bike Showroom SYM"><div class= "image_border"><%= image_tag "sym.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "64x64"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "64x64"%></div></a>
+           
         </div>  
       </div>
     <% end%>
@@ -92,12 +96,19 @@
         </div>  
       
     </div>
+    <!--
     <div class= "showroom_facebook">
       <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts/" data-width="310" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true">
       </div>
     </div>
+  -->
   </div>
 </div>
+<div class = "facebook_comment">
+  <div class= "legen">
+    Comments:
+  </div>
+<div class="fb-comments" data-href="http://bikes.bechnu.com/showroom/" data-width="300" data-num-posts="10"></div></div>
 <%= javascript_include_tag "jquery.min" %>
 <script type="text/javascript">
   $('select#make').change(function() 
